math-core/tests/snapshots/conversion_test__text_no_braces.snap
---
source: math-core/tests/conversion_test.rs
expression: "\\text x"
---
<math>
    <mtext>x</mtext>
</math>
