math-core/tests/snapshots/conversion_test__text_no_braces_more_space.snap
---
source: math-core/tests/conversion_test.rs
expression: "\\text    xx"
---
<math>
    <mtext>x</mtext>
    <mi>x</mi>
</math>
