math-core/tests/snapshots/conversion_test__text_no_braces_space_after.snap
---
source: math-core/tests/conversion_test.rs
expression: "\\text x y"
---
<math>
    <mtext>x</mtext>
    <mi>y</mi>
</math>
