math-core/tests/snapshots/conversion_test__text_transforms.snap
---
source: math-core/tests/conversion_test.rs
expression: "{fi}\\ \\mathit{fi}\\ \\mathrm{fi}\\ \\texttt{fi}"
---
<math>
    <mrow>
        <mi>f</mi>
        <mi>i</mi>
    </mrow>
    <mtext> </mtext>
    <mi>𝑓𝑖</mi>
    <mtext> </mtext>
    <mpadded><mi>fi</mi></mpadded>
    <mtext> </mtext>
    <mtext>𝚏𝚒</mtext>
</math>
