math-core/tests/snapshots/conversion_test__text_with_group.snap
---
source: math-core/tests/conversion_test.rs
expression: "\\text{x{y}z{}p{}}"
---
<math>
    <mtext>xyzp</mtext>
</math>
